# tp-lumina-platform

./: .gitignore  Dockerfile  LICENSE  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
app/: main.py  storage.py
app/api/v1/endpoints/: admin.py  auth.py  demos.py  notifications.py
app/core/: rbac.py
app/db/: firestore.py  storage.py
app/models/: tenant.py  user.py
app/services/: audit.py  notifications.py  workflow.py
app/templates/: config.txt  dashboard.html  demo_base.html  login.html
scripts/: seed_data.py
